--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -480,3 +480,21 @@ a {
 .btn-light i {
     margin-right: 5px;
 }
+/* etiquetas */
+.tag-badge {
+    background-color: #1DA1F2;
+    color: white;
+    border-radius: 12px;
+    padding: 5px 10px;
+    font-size: 14px;
+    display: inline-flex;
+    align-items: center;
+}
+.tag-remove {
+    cursor: pointer;
+    margin-left: 8px;
+    font-size: 12px;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    padding: 2px 6px;
+}
